--- a/code/desc template.qmd
+++ b/code/desc template.qmd
@@ -96,7 +96,7 @@ t_custom <- df1 %>%
 t_custom
 ```
 
-![](./images/SummaryTables.png)
+![](../images/SummaryTables.png)
 
 ### Step 6 - Customize output using add-on functions
 
@@ -183,7 +183,7 @@ df1 %>%
 
 `as_gt()` converts a gtsummary object to a `"gt_tbl"` object. A user can use this function if they wish to add customized formatting available via the [gt package](https://gt.rstudio.com/index.html).
 
-![](gt_parts_of_a_table.svg)
+![](../images/gt_parts_of_a_table.svg)
 
 ```{r gt}
 t_custom_mod %>% 
