--- a/code/logit template.qmd
+++ b/code/logit template.qmd
@@ -21,10 +21,11 @@ knitr::opts_chunk$set(
 pacman::p_load(
   rio,              # import data
   here,             # easy file referencing
-  tidyverse,        # set of core packages that you’re likely to use in everyday data analyses
+  tidyverse,        # set of core packages used in everyday data analyses
   janitor,          # simplify variable names
   labelled,         # variable label
-  lmtest,
+  broom,            # tidy model object
+  lmtest,           # compare models
   gtsummary,        # creates presentation-ready tables summarizing data
   gt                # customize gtsummary output
 )
@@ -49,45 +50,47 @@ skimr::skim(df)
 # Data management: join, filter, mutate, select, set labels
 df1 <- df %>%
   clean_names() %>%
-  drop_na() %>%
-  select(gender = male, 
-         age, 
-         smoke = current_smoker, 
-         cigs = cigs_per_day, 
-         bpmeds = bp_meds,
-         stroke = prevalent_stroke,
-         hyper = prevalent_hyp,
-         diabetes,
-         chol = tot_chol,
-         sysbp = sys_bp,
-         diabp = dia_bp,
-         bmi,
-         hr = heart_rate,
-         glucose,
-         chd = ten_year_chd) %>% 
-  set_variable_labels(
-    gender = 'Gender',
-    age = 'Age',
-    smoke = 'Current smoker',
-    cigs = 'Cigarettes/day',
-    bpmeds = 'Blood pressure medication',
-    stroke = 'History of stroke',
-    hyper = 'Hypertensive',
-    diabetes = 'Diabetes',
-    chol = 'Cholesterol ',
-    sysbp = 'Systolic',
-    diabp = 'Diastolic',
-    bmi = 'BMI',
-    hr = 'Heart rate',
-    glucose = 'Glucose',
-    chd = '10 year risk of CHD'
+  drop_na() %>% 
+  mutate(
+    across(c(male, current_smoker, bp_meds:diabetes), as.factor)
+  ) %>%
+  select(
+    gender = male,
+    age,
+    smoke = current_smoker,
+    cigs = cigs_per_day,
+    bpmeds = bp_meds,
+    stroke = prevalent_stroke,
+    hyper = prevalent_hyp,
+    diabetes,
+    chol = tot_chol,
+    sysbp = sys_bp,
+    diabp = dia_bp,
+    bmi,
+    hr = heart_rate,
+    glucose,
+    chd = ten_year_chd
   ) %>% 
-mutate(
-  across(c(gender, smoke, bpmeds:diabetes), as.factor)
-)
+  set_variable_labels(
+    gender   = 'Gender',
+    age      = 'Age',
+    smoke    = 'Current smoker',
+    cigs     = 'Cigarettes/day',
+    bpmeds   = 'Blood pressure medication',
+    stroke   = 'History of stroke',
+    hyper    = 'Hypertensive',
+    diabetes = 'Diabetes',
+    chol     = 'Cholesterol ',
+    sysbp    = 'Systolic',
+    diabp    = 'Diastolic',
+    bmi      = 'BMI',
+    hr       = 'Heart rate',
+    glucose  = 'Glucose',
+    chd      = '10 year risk of CHD'
+  )
 ```
 
-### Linear regression vs logistic regression
+#### Linear regression vs logistic regression
 
 ::: columns
 ::: column
@@ -124,8 +127,7 @@ df1 %>%
 
 ``` r
 object <- glm(formula = dv ~ iv1 + iv2 + iv3, family = "binomial", data = df)
-summary(object)  # results in logit coefficients 
-exp(cbind(OR = coef(object), confint(object)))  # results in ORs and their CIs
+summary(object)  # results in logit coefficients
 ```
 
 -   `formula =` The model is provided to [`glm()`](https://rdrr.io/r/stats/glm.html) as an equation, with the outcome on the left and explanatory variables on the right of a tilde `~`.
@@ -136,27 +138,18 @@ exp(cbind(OR = coef(object), confint(object)))  # results in ORs and their CIs
 
 ### Step 3 - Univariate
 
+Use univariable analysis to explore the unadjusted association between variables and outcome. Each of the interested variables will be included in a logistic regression model, one for each time.
+
 ```{r uni}
-uni_pregnant <- glm(p_diabetes ~ pregnant, 'binomial', df1)
-summary(uni_pregnant)
-exp(cbind(OR = coef(uni_pregnant), confint(uni_pregnant)))
-broom::tidy(uni_pregnant, exponentiate = TRUE, conf.int = TRUE)
+# Using stat package in base R
+uni_gender <- 
 
-uni_glucose  <- glm(p_diabetes ~ glucose, family = 'binomial', data = df1)
-summary(uni_glucose)
-exp(cbind(OR = coef(uni_glucose), confint(uni_glucose)))
-broom::tidy(uni_glucose, exponentiate = TRUE, conf.int = TRUE)
+uni_age <- 
 
-summary(glm(p_diabetes ~ glucose, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ pressure, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ triceps, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ insulin, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ mass, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ pedigree, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ age, family = 'binomial', data = df1))
-summary(glm(p_diabetes ~ pedigree, family = 'binomial', data = df1))
-
-
+# Using gtsummary::tbl_uvregression
+t_uni <- 
+  
+t_uni
 ```
 
 ### Step 4 - Multivariate
@@ -167,4 +160,36 @@ Variables inclusion and selection
 
 -   We can start a regression using either a full (saturated) model, or a null (empty) model, which starts only with the intercept term.
 
--   
+```{r}
+# full model
+fullmodel <- 
+
+# null model
+nullmodel <- 
+```
+
+-   Backward elimination
+
+```{r}
+
+```
+
+-   Stepwise selection using `step()`
+
+```{r}
+
+```
+
+-   `tbl_regression` to produce nice table
+
+```{r}
+t_multi <- 
+  
+t_multi
+```
+
+### Step 5 - Merge univariate & multivariate tables
+
+```{r}
+
+```
